fix colors and body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html,
 body,
 #root {
   font-family: "Catamaran", sans-serif;
+  color: hsla(0, 0%, 0%, 0.78);
 }
 
 * {
